[package]
name = "timeline_viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
plotly = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
gloo = "0.11"
gloo-file = { version = "0.2", features = ["futures"] }
web-sys = { version = "0.3", features = ["FileReader", "Blob", "HtmlInputElement", "CssStyleDeclaration", "FileList"] }
js-sys = "0.3"
itertools = "0.14.0"
indexmap = "2"
